# PyOPF

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py  versioneer.py
cases/IEEE-118/: IEEE-118.raw
cases/IEEE-14/: IEEE-14.RAW
cases/NYISO/: scenario.json
cases/NYISO/scenarios/2030/: NYISO_onpeak2030_v11_shunts_as_gens.raw
cases/NYISO/scenarios/offpeak/: NYISO_offpeak2019_v23.raw  NYISO_offpeak2019_v23_shunts_as_gens.raw  (+1 more)
cases/Texas7k/: Texas7k.RAW
conda.recipe/: conda_build_config.yaml  meta.yaml
data_utilities/: check_data.py  construct_infeasibility_solution.py  data.py  data_numpy.py  evaluation.py  infeasibility_solution.py  main.py  modify_data.py  scrub_data.py  sup_schema.json  swsh_utils.py  swsh_utils_py.py  write_summary_keys.py  xfmr_utils.py
pyopf/: OPF.py  __init__.py  __main__.py  _version.py  run.py
pyopf/models/: GridData.py  TransmissionElements.py  Variables.py  __init__.py
pyopf/parse/: __init__.py  parse.py  parse_filepaths.py
pyopf/postprocess/: __init__.py  postprocess.py
pyopf/preprocess/: __init__.py  argparse_actions.py  check_island.py  parse.py  parse_filepaths.py
pyopf/preprocess/data_utilities/: __init__.py  check_data.py  construct_infeasibility_solution.py  cost_utils.py  data.py  data_json.py  data_numpy.py  evaluation.py  infeasibility_solution.py  main.py  modify_data.py  scrub_data.py  swsh_utils.py  write_summary_keys.py
pyopf/util/: Log.py  __init__.py  save_results.py  update_grid_data.py
tests/: test_OPF.py  test_OPF_basic.py  test_OPF_options.py
(+1 files in other folders)
